# theory-complex-systems-assignment

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: analysis.yml
report/: main.typ  solutions.typ
scripts/: combined.py  model_neuron.py  supreme_court.py
src/tcs_assignment/: __init__.py  plotting.py
